fixed tool h2 spacing

--- a/src/components/home/subcomponents/tools/Tools.css
+++ b/src/components/home/subcomponents/tools/Tools.css
@@ -13,10 +13,6 @@
   }
 }
 
-section.section.col-container > h2 {
-  padding-bottom: 5rem;
-}
-
 .tools {
   padding: 0 1rem;
 }
